--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -31,9 +31,9 @@ const {
     <meta name="twitter:description" content={description} />
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <link rel="manifest" href="/manifest.webmanifest" />
+    <link rel="alternate" type="application/rss+xml" title={SITE_TITLE} href="/rss.xml" />
     <link rel="preload" as="style" href="/fonts.css" media="print" onload="this.media='all'" />
     <noscript><link rel="stylesheet" href="/fonts.css" /></noscript>
-    <link rel="stylesheet" href="/styles.css" media="print" onload="this.media='all'" />
     <script type="application/ld+json">
       {JSON.stringify({
         '@context': 'https://schema.org',
